syntax = "proto3";

option csharp_namespace = "ArchitectZad2";

package cars;

// The greeting service definition.
service Cars {
  
  rpc GetCars (Empty) returns (stream CarReply);
  rpc AddCar (CarUpdateRequest) returns (CarReply);
  rpc UpdateCar (CarUpdateRequest) returns (CarReply);
   rpc RemoveCar (CarUpdateRequest) returns (CarReply);

  rpc GetColors (Empty) returns (stream ColorMessage);
  rpc GetManufacturers (Empty) returns (stream ManufacturerMessage);

  rpc AddColor (ColorMessage) returns (ColorMessage);
  rpc UpdateColor (ColorMessage) returns (ColorMessage);
  rpc RemoveColor (ColorMessage) returns (ColorMessage);

  rpc AddManufacturer (ManufacturerMessage) returns (ManufacturerMessage);
  rpc UpdateManufacturer (ManufacturerMessage) returns (ManufacturerMessage);
  rpc RemoveManufacturer (ManufacturerMessage) returns (ManufacturerMessage);
}

message Empty
{

}

message CarReply 
{
  int32 Id = 1;
  int32 ManufacturerId = 2;
  string Manufacturer = 3;
  string Model = 4;
  int32 ColorId = 5;
  string Color = 6;
  float Price = 7;
}

message CarUpdateRequest
{
  int32 Id = 1;
  int32 ManufacturerId = 2;
  string Model = 3;
  int32 ColorId = 4;
  float Price = 5;
}



message ColorMessage
{
	int32 id = 1;
	string Name = 2;
	string Description = 3;
}

message ManufacturerMessage
{
	int32 id = 1;
	string Name = 2;
	string Description = 3;
}